<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/data_covid19"
        android:textSize="25sp" />
    <LinearLayout
        android:id="@+id/llSearchDataCovid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/tvJudul">
        <EditText
            android:id="@+id/etSearchDataCovid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:autofillHints="nama provinsi"
            android:gravity="center_vertical"
            android:hint="@string/nama_prov"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:focusable="true"/>
        <Button
            android:id="@+id/btnSearchDataCovid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:text="@string/search"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/svDataCovid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llSearchDataCovid">
        <LinearLayout
            android:id="@+id/llDataCovid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/tvProv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvSembuhJudul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sembuh"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="10dp"
                        android:textStyle="bold"
                        android:text="@string/titikdua" />

                    <TextView
                        android:id="@+id/tvSembuh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvMeninggalJudul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meninggal"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="10dp"
                        android:textStyle="bold"
                        android:text="@string/titikdua" />

                    <TextView
                        android:id="@+id/tvMeninggal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvTotalJudul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kasus_total"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="10dp"
                        android:textStyle="bold"
                        android:text="@string/titikdua" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvLastDateJudul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_date"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="10dp"
                        android:textStyle="bold"
                        android:text="@string/titikdua" />

                    <TextView
                        android:id="@+id/tvLastDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>